fix(header): align main content to center

--- a/packages/header/header.pcss
+++ b/packages/header/header.pcss
@@ -3,12 +3,12 @@
 .sds-header {
   align-items: center;
   background-color: var(--sds-color-layout-background-primary);
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
   min-height: 48px;
   padding: 0 var(--sds-space-padding-huge);
 
-  &__skip-link:focus-within {
+  &__skip-link.sds-screen-reader-only--focusable:focus-within {
     position: absolute;
   }
 
